Archive2/91/e91af15fd55609/output
main.cpp: In function 'int main()':
main.cpp:242:73: error: 'boost::multi_index::detail::ordered_index<boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getDirFilter>, std::less<int>, boost::multi_index::detail::nth_layer<3, MLLEntry, boost::multi_index::indexed_by<boost::multi_index::ordered_unique<boost::multi_index::identity<MLLEntry> >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<composite>, boost::multi_index::composite_key<MLLEntry, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getSetupCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getPutFileCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getCleanupCmd> > >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<dirfilter>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getDirFilter> > >, std::allocator<MLLEntry> >, boost::mpl::v_item<dirfilter, boost::mpl::vector0<mpl_::na>, 0>, boost::multi_index::detail::ordered_non_unique_tag>' is an inaccessible base of 'boost::multi_index::detail::ordered_index<boost::multi_index::composite_key<MLLEntry, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getSetupCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getPutFileCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getCleanupCmd> >, std::less<boost::multi_index::composite_key_result<boost::multi_index::composite_key<MLLEntry, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getSetupCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getPutFileCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getCleanupCmd> > > >, boost::multi_index::detail::nth_layer<2, MLLEntry, boost::multi_index::indexed_by<boost::multi_index::ordered_unique<boost::multi_index::identity<MLLEntry> >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<composite>, boost::multi_index::composite_key<MLLEntry, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getSetupCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getPutFileCmd>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getCleanupCmd> > >, boost::multi_index::ordered_non_unique<boost::multi_index::tag<dirfilter>, boost::multi_index::const_mem_fun<MLLEntry, int, &MLLEntry::getDirFilter> > >, std::allocator<MLLEntry> >, boost::mpl::v_item<composite, boost::mpl::vector0<mpl_::na>, 0>, boost::multi_index::detail::ordered_non_unique_tag>'
     IndexedFileInfo::index<dirfilter>::type& index4 = c1.get<composite>();     
                                                                         ^
